[package]
name = "wickdb"
version = "0.1.0"
authors = ["fullstop000 <fullstop1005@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.4.0"
crossbeam-utils = "0.7.0"
libc = "0.2.0"
log = "0.4.6"
rand = "0.7.2"
snap = "0.2.5"
crc32c = "0.4.0"
fs2 = "0.4.3"
fxhash = "0.2.1"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
# Excat the folder name
name = "benches"
harness = false
