[package]
name = "wickdb"
version = "0.1.0"
authors = ["fullstop000 <fullstop1005@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.4.0"
crossbeam-utils = "0.7.0"
log = "0.4.6"
rand = "0.7.2"
snap = "1.0.0"
crc32c = "0.4.0"
fs2 = "0.4.3"
fxhash = "0.2.1"
quick-error = "1.2.3"
num-traits = "0.2"
num-derive = "0.3"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
# Excat the folder name
name = "benches"
harness = false
