[package]
authors = ["fullstop000 <fullstop1005@gmail.com>"]
edition = "2018"
name = "wickdb"
version = "0.1.0"

[dependencies]
bytes = "0.5.6"
crc32c = "0.4.0"
crossbeam-channel = "0.4.0"
crossbeam-utils = "0.7.0"
fs2 = "0.4.3"
fxhash = "0.2.1"
log = "0.4.6"
num-derive = "0.3"
num-traits = "0.2"
quick-error = "1.2.3"
rand = "0.7.2"
slog = "2.5.2"
slog-async = "2.4.0"
slog-term = "2.5.0"
snap = "1.0.0"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
harness = false
name = "benches"
